--- a/src/styles/RestaurantCard.css
+++ b/src/styles/RestaurantCard.css
@@ -11,8 +11,9 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   padding: 16px;
   margin: 16px;
+  height: 600px;;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  width: 300px;
+  width: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
